chore: added some known vulnerable dependencies